Add provider config
Web imagery providers are now managed via a dropdown list. The list can be edited
via the standard 'add', 'remove' and 'edit' buttons next to the list widget.
The add button opens up a dialog with a form where the user can specify the provider
name as it will appear in the list, URL and provider type.
The update button opens the same dialog, but the form inputs are used to update
the provider currently selected in the list. However, if the provider is one of the
built-in Maxar products, then another dialog pops up, this time only offering
a field to type in a new Connect ID.

Internally, the providers are written to custom_providers.json in the plugin directory.

--- a/mapflow/static/ui/custom_provider_dialog.ui
+++ b/mapflow/static/ui/custom_provider_dialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string notr="true">Custom provider</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -33,7 +33,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="labelUrl">
        <property name="text">
-        <string>Url</string>
+        <string notr="true">URL</string>
        </property>
       </widget>
      </item>
