--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -279,12 +279,6 @@
        </item>
        <item row="0" column="1" colspan="2">
         <widget class="QLineEdit" name="processingName">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
          <property name="minimumSize">
           <size>
            <width>100</width>
@@ -321,12 +315,6 @@
        </item>
        <item row="0" column="4" colspan="2">
         <widget class="QComboBox" name="workflowDefinitionCombo">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
          <property name="minimumSize">
           <size>
            <width>100</width>
@@ -693,7 +681,11 @@
              <string notr="true">color: rgb(115, 210, 22);</string>
             </property>
             <property name="text">
-             <string>+</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>../icons/add_provider.svg</normaloff>../icons/add_provider.svg</iconset>
             </property>
            </widget>
           </item>
@@ -727,7 +719,11 @@
              <string notr="true">color: rgb(239, 41, 41);</string>
             </property>
             <property name="text">
-             <string>-</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>../icons/remove_provider.svg</normaloff>../icons/remove_provider.svg</iconset>
             </property>
            </widget>
           </item>
@@ -756,7 +752,7 @@
             </property>
             <property name="icon">
              <iconset>
-              <normaloff>edit_button.svg</normaloff>edit_button.svg</iconset>
+              <normaloff>../icons/edit_provider.svg</normaloff>../icons/edit_provider.svg</iconset>
             </property>
            </widget>
           </item>
@@ -921,40 +917,43 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
-          <layout class="QHBoxLayout" name="layoutMaxarHeader" stretch="1,1,0">
+          <layout class="QHBoxLayout" name="layoutMaxarHeader" stretch="0,0,0">
+           <property name="spacing">
+            <number>20</number>
+           </property>
            <item>
             <widget class="QLabel" name="howToConnect">
-           <property name="font">
-            <font>
-             <pointsize>12</pointsize>
-             <kerning>true</kerning>
-            </font>
-           </property>
-           <property name="text">
+             <property name="font">
+              <font>
+               <pointsize>11</pointsize>
+               <kerning>true</kerning>
+              </font>
+             </property>
+             <property name="text">
               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;https://docs.mapflow.ai/docs_api/qgis_mapflow.html#how-to-connect-to-maxar-securewatch&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;How to connect?&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-           </property>
-           <property name="textFormat">
-            <enum>Qt::AutoText</enum>
-           </property>
-           <property name="wordWrap">
-            <bool>true</bool>
-           </property>
-           <property name="openExternalLinks">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-            <widget class="QLabel" name="termsOfService">
-              <property name="text">
-              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;a href=&quot;https://www.maxar.com/legal/securewatch-license&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Terms of Service&lt;/span&gt;&lt;/a&gt;&lt;/body&gt;&lt;/html&gt;</string>
-              </property>
+             </property>
              <property name="textFormat">
-              <enum>Qt::RichText</enum>
-              </property>
+              <enum>Qt::AutoText</enum>
+             </property>
+             <property name="wordWrap">
+              <bool>true</bool>
+             </property>
              <property name="openExternalLinks">
               <bool>true</bool>
-              </property>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="termsOfService">
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;a href=&quot;https://www.maxar.com/legal/securewatch-license&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0057ae;&quot;&gt;Terms of Service&lt;/span&gt;&lt;/a&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+             <property name="textFormat">
+              <enum>Qt::RichText</enum>
+             </property>
+             <property name="openExternalLinks">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item>
@@ -1143,7 +1142,7 @@
            <x>30</x>
            <y>20</y>
            <width>526</width>
-           <height>311</height>
+           <height>371</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="layoutHelp" stretch="0,0">
