--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -823,7 +823,7 @@
          <bool>false</bool>
         </property>
         <property name="collapsed">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="saveCollapsedState">
          <bool>true</bool>
