--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -1054,14 +1054,6 @@
            </attribute>
            <column>
             <property name="text">
-             <string>ID</string>
-            </property>
-            <property name="textAlignment">
-             <set>AlignCenter</set>
-            </property>
-           </column>
-           <column>
-            <property name="text">
              <string>Source Unit</string>
             </property>
             <property name="textAlignment">
@@ -1095,6 +1087,14 @@
            <column>
             <property name="text">
              <string>Date</string>
+            </property>
+            <property name="textAlignment">
+             <set>AlignCenter</set>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string notr="true">ID</string>
             </property>
             <property name="textAlignment">
              <set>AlignCenter</set>
