--- a/mapflow/static/resources.qrc
+++ b/mapflow/static/resources.qrc
@@ -1,7 +1,8 @@
 <RCC>
-    <qresource prefix="/plugins/mapflow" >
-        <file>icons/add_provider.svg</file>
-        <file>icons/remove_provider.svg</file>
-        <file>icons/edit_provider.svg</file>
-    </qresource>
+  <qresource prefix="/plugins/mapflow">
+    <file>icons/mapflow.png</file>
+    <file>icons/add_provider.svg</file>
+    <file>icons/remove_provider.svg</file>
+    <file>icons/edit_provider.svg</file>
+  </qresource>
 </RCC>
