--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>MainDialog</class>
+ <widget class="QDialog" name="MainDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -641,6 +641,9 @@
            </item>
            <item>
             <widget class="QCheckBox" name="zoomLimitMaxar">
+              <property name="layoutDirection">
+               <enum>Qt::RightToLeft</enum>
+              </property>
              <property name="text">
               <string>Limit zoom to 14</string>
              </property>
