--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -135,11 +135,6 @@
          <property name="enabled">
           <bool>false</bool>
          </property>
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-          </font>
-         </property>
          <property name="text">
           <string>Use image extent</string>
          </property>
@@ -352,14 +347,7 @@
             <number>0</number>
           </property>
           <item>
-           <widget class="QLineEdit" name="outputDirectory">
-            <property name="minimumSize">
-             <size>
-              <width>200</width>
-              <height>21</height>
-             </size>
-            </property>
-           </widget>
+            <widget class="QLineEdit" name="outputDirectory"/>
           </item>
           <item>
            <widget class="QPushButton" name="selectOutputDirectory">
